feat:review and add annotations

--- a/3-vector_db/generate_ground_truth_data.ipynb
+++ b/3-vector_db/generate_ground_truth_data.ipynb
@@ -5,24 +5,9 @@
    "id": "e7bd4ec3-acc1-4053-8dad-164d0717df51",
    "metadata": {},
    "source": [
-    "## Purpose of this code is to generate ground_truth_data.csv"
+    "## Generate ground truth file for evaluation\n",
+    "Purpose of this code is to generate ground_truth_data.csv"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12dbeebd-8ccf-4c56-b953-0c7c69cbde3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb41cbb1-c548-48a5-9e83-9b6db7e6e71b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -65,6 +50,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ef970c5",
+   "metadata": {},
+   "source": [
+    "## Generate unique IDs for Documents\n",
+    "To accurately track relevant documents, each document is assigned a unique ID. By maintaining consistent IDs, we can manage changes and updates to the document set without affecting the evaluation process. This helps know which answer goes with which question."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "958a7a04-2eac-4ffb-9a86-5939e4123eb2",
@@ -75,11 +69,11 @@
     "\n",
     "def generate_document_id(doc):\n",
     "    # combined = f\"{doc['course']}-{doc['question']}\"\n",
-    "    combined = f\"{doc['course']}-{doc['question']}-{doc['text'][:10]}\"\n",
-    "    hash_object = hashlib.md5(combined.encode())\n",
+    "    combined = f\"{doc['course']}-{doc['question']}-{doc['text'][:10]}\" # Concatenate Document Attributes\n",
+    "    hash_object = hashlib.md5(combined.encode()) # Use the MD5 hashing algorithm to create a hash from the concatenated string. \n",
     "    hash_hex = hash_object.hexdigest()\n",
-    "    document_id = hash_hex[:8]\n",
-    "    return document_id"
+    "    document_id = hash_hex[:8] # Extract a Substring of the Hash\n",
+    "    return document_id #Assign the ID to the Document using the Hash"
    ]
   },
   {
@@ -129,6 +123,15 @@
    ],
    "source": [
     "!head documents-with-ids.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "979d2d99",
+   "metadata": {},
+   "source": [
+    "## Use LLM to generate user queries based on documents\n",
+    "This acts as an alternative to human annotation, which is the better approach to generate ground truth data."
    ]
   },
   {
@@ -229,6 +232,7 @@
     }
    ],
    "source": [
+    "#for each doc, we generate queries and save the doc-question paires\n",
     "for doc in tqdm(documents): \n",
     "    doc_id = doc['id']\n",
     "    if doc_id in results:\n",
@@ -239,12 +243,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c3f3f33-af7d-4d04-9086-82e126177f14",
+   "cell_type": "markdown",
+   "id": "36db4a08",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To save some quota, we directly load the pre generated doc-queries pairs :)"
+   ]
   },
   {
    "cell_type": "code",
@@ -275,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_qs_url = 'https://github.com/DataTalksClub/llm-zoomcamp/raw/main/03-vector-search/eval/results.bin'\n"
+    "gen_qs_url = 'https://github.com/DataTalksClub/llm-zoomcamp/raw/main/03-vector-search/eval/results.bin'"
    ]
   },
   {
@@ -306,6 +310,7 @@
     }
    ],
    "source": [
+    "#sample questions\n",
     "loaded_pickle_object['1f6520ca']"
    ]
   },
@@ -884,7 +889,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('ground-truth-data.csv', index=False)"
+    "df.to_csv('ground-truth-data.csv', index=False) #save ground truth to a file"
    ]
   }
  ],
