--- a/3-vector_db/keyword_search_evalutaion.ipynb
+++ b/3-vector_db/keyword_search_evalutaion.ipynb
@@ -83,6 +83,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "086ca05a",
+   "metadata": {},
+   "source": [
+    "Define the settings and mappings for Elastic Search index. The loaded documents are then indexed into Elastic Search."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "91bad1c7-7d98-4174-a417-2456742eecaf",
@@ -108,6 +116,14 @@
     "\n",
     "for doc in tqdm(documents):\n",
     "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141b8aa1",
+   "metadata": {},
+   "source": [
+    "Perform a search query on the Elastic Search index. The search query uses a multi_match query to search across multiple fields (question, text, section) with different weights. It filters the search results by the specified course and returns the top 5 search results"
    ]
   },
   {
@@ -194,6 +210,14 @@
     "    query=\"I just discovered the course. Can I still join?\",\n",
     "    course=\"data-engineering-zoomcamp\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2746c49d",
+   "metadata": {},
+   "source": [
+    "Load ground truth data from CSV file (ground-truth-data.csv) and convert it into a list of dictionaries."
    ]
   },
   {
@@ -284,6 +308,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4eacf98",
+   "metadata": {},
+   "source": [
+    "For each query in the ground truth data, perform a search using the elastic_search function, compare the search results with the ground truth document ID, and store the relevance results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "35a7b537-8fc0-4d65-bb6b-c8c7868215de",
@@ -353,6 +385,10 @@
    "outputs": [],
    "source": [
     "def hit_rate(relevance_total):\n",
+    "    '''\n",
+    "     measures how often the search system manages to find a relevant document for a query. \n",
+    "     For example, if you have 10 queries and the search system finds a relevant document for 8 of those queries, the Hit Rate is 8/10 or 80%.\n",
+    "    '''\n",
     "    cnt = 0\n",
     "\n",
     "    for line in relevance_total:\n",
@@ -370,6 +406,15 @@
    "outputs": [],
    "source": [
     "def mrr(relevance_total):\n",
+    "    '''\n",
+    "    Reciprocal Rank is the inverse of the rank at which the first relevant document is found. \n",
+    "    For example, if the first relevant document is found at rank 1, the reciprocal rank is 1/1 = 1. \n",
+    "    If it’s found at rank 2, the reciprocal rank is 1/2 = 0.5, at rank 3 it is 1/3 ≈ 0.33, and so on.\n",
+    "\n",
+    "    So Mean Reciprocal Rank is the average of the reciprocal ranks across multiple queries. \n",
+    "    It evaluates the rank position of the first relevant document across different queries. \n",
+    "    For example, if you have three queries and their reciprocal ranks are 1, 0.5, and 0.33, the MRR would be (1 + 0.5 + 0.33) / 3 ≈ 0.61.\n",
+    "    '''\n",
     "    total_score = 0.0\n",
     "\n",
     "    for line in relevance_total:\n",
