--- a/3-vector_db/vector_db_search.ipynb
+++ b/3-vector_db/vector_db_search.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "761eaba1",
+   "metadata": {},
+   "source": [
+    "A vector database *indexes* and *stores* vector embeddings for fast search and optimized storage. Provides the ability to compare mulitple things semantically at the same time.   Semantic search using Elasticsearch is a specific implementation of vector search that leverages Elasticsearch's capabilities to perform semantic search."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "eae59aa8-ccb3-4714-b1e7-7525dab345dd",
@@ -49,7 +57,8 @@
    "id": "f43620a5-8f40-40bc-8da2-82c7c4bb6b3e",
    "metadata": {},
    "source": [
-    "Create Embeddings using pretrained models"
+    "# Semantic search with Elasticsearch\n",
+    "## Create Embeddings using pretrained models"
    ]
   },
   {
@@ -319,7 +328,7 @@
    "id": "0cc4b68f-7b00-4814-bf65-3edcacd89af0",
    "metadata": {},
    "source": [
-    " Create Mappings and Index"
+    "## Create Mappings and Index"
    ]
   },
   {
@@ -440,7 +449,7 @@
    "id": "e7ebd62c-5247-4bd9-9602-1498498c8656",
    "metadata": {},
    "source": [
-    "Add documents into index"
+    "## Add documents into index"
    ]
   },
   {
